--- a/financas-app/src/components/Forms/FormF.module.css
+++ b/financas-app/src/components/Forms/FormF.module.css
@@ -1,22 +1,37 @@
 .preencher {
-    color: #232323;
-    outline: none;
-    width: 48%;
-    margin: 3px 3px;
-    padding: 0 3px;
-    border-radius: 8px;
-    border: 1px solid #232323;
-  }
+  color: #232323;
+  outline: none;
+  width: 48%;
+  margin: 3px 3px;
+  padding: 0 6px;
+  border-radius: 4px;
+  border: 1px solid #232323;
+}
 
-  .radioinput {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    height: 100%;
-  }
+.preencher::placeholder{
+  padding-left: 0px;
+}
 
-  .choices span{
-   margin-right: 15px;
-   padding: 5px;
+.radioinput {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 100%;
+}
+
+.choices {
+  margin-left: 40px;
+}
+
+.choices span {
+  margin-right: 25px;
+  padding: 5px;
+}
+
+
+@media (max-width: 992px) {
+  .choices {
+    margin-left: 20px;
   }
+}
