--- a/financas-app/src/components/Forms/FormF.module.css
+++ b/financas-app/src/components/Forms/FormF.module.css
@@ -3,6 +3,7 @@
   outline: none;
   width: 48%;
   margin: 3px 3px;
+  height: 30px;
   padding: 0 6px;
   border-radius: 4px;
   border: 1px solid #232323;
@@ -21,12 +22,19 @@
 }
 
 .choices {
-  margin-left: 40px;
+  margin-left: 80px;
 }
 
 .choices span {
   margin-right: 25px;
   padding: 5px;
+  font-weight: bold;
+}
+
+.envio {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
 }
 
 
