--- a/financas-app/src/components/Forms/FormF.module.css
+++ b/financas-app/src/components/Forms/FormF.module.css
@@ -22,7 +22,7 @@
 }
 
 .choices {
-  margin-left: 80px;
+  margin-left: 130px;
 }
 
 .choices span {
@@ -40,6 +40,16 @@
 
 @media (max-width: 992px) {
   .choices {
-    margin-left: 20px;
+    margin-left: 70px;
   }
+  
+}
+@media (max-width: 768px) {
+  .envio {
+    justify-content: center;
+  }
+  .choices {
+    margin-left: 30px;
+  }
+
 }
