--- a/financas-app/src/components/List/list.module.css
+++ b/financas-app/src/components/List/list.module.css
@@ -9,16 +9,19 @@
     max-width: 100px; 
     overflow-wrap: break-word; 
     width: 100px;
+    font-weight: bold;
+    padding-left: 10px;
 }
 
 .item .descricao {
-    width: 90px;
-    max-width: 90px; 
+    width: 100px;
+    max-width: 100px; 
     overflow-wrap: break-word; 
     padding-left: 20px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+    font-weight: bold;
 }
 
 
@@ -77,6 +80,19 @@
     cursor: pointer;
 }
 
+.item .editandoitem {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 30px;
+    width: 30px;
+    background-color: #14a827;
+    color: white;
+    border: 0.2px solid #14a827;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
 .form-control-color, .item {
     align-items: center;
     display: flex;
@@ -94,3 +110,27 @@
     border-radius: 6px;
     cursor: pointer;
 }   
+
+.item .editandoitem:hover {
+    background-color: #14a828c9;
+    color: white;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+.preencher {
+    color: white;
+    background-color: #12343b;
+    outline: none;
+    width: 48%;
+    margin: 3px 3px;
+    height: 30px;
+    padding: 0 6px;
+    border-radius: 4px;
+    border: 1px solid #ffffff;
+  }
+  
+  .preencher::placeholder{
+    padding-left: 0px;
+    color: rgba(255, 255, 255, 0.348);
+  }
