--- a/financas-app/src/components/Header/header.module.css
+++ b/financas-app/src/components/Header/header.module.css
@@ -5,6 +5,9 @@
     height: 90px;
     margin-top: 40px;
     display: flex;
+    max-width: 355px;
+    margin-left: auto;
+    margin-right: auto;
     align-items: center;
     justify-content: center;
     flex-direction: column;
