--- a/financas-app/src/components/List/list.module.css
+++ b/financas-app/src/components/List/list.module.css
@@ -120,6 +120,8 @@
 
 .preencher {
     color: white;
+    width: 230px;
+    max-width: 230px;
     background-color: #12343b;
     outline: none;
     width: 48%;
@@ -133,4 +135,32 @@
   .preencher::placeholder{
     padding-left: 0px;
     color: rgba(255, 255, 255, 0.348);
+  }
+
+
+  @media (max-width: 248px){
+    .item {
+        direction: flex;
+        flex-direction: column;
+        margin-right: 0;
+        margin-left: 0;
+        width: 100%;
+        text-align: center;
+    }
+    .item .valor {
+        margin: 0;
+        padding: 0;
+        text-align: center;
+    }
+    .item .descricao {
+        margin: 0;
+        padding: 0;
+        text-align: center;
+    }
+    .item .botoesTask {
+        margin: 0;
+        margin-top: 4px;
+        padding: 0;
+        text-align: center;
+    }
   }
